--- a/films.html
+++ b/films.html
@@ -1,70 +1,80 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="stylesheet" href="films.css" />
-		<title>JustStreamIt</title>
-		<script src="js/main.js" defer></script>
-	</head>
+<html lang="fr">
+<head>
+    <!-- tête de la page -->
+    <meta charset="utf-8" />
+    <title>JustStreamIt</title>
+    <link rel="stylesheet" href="films.css"/>
+    <script src="film.js" async></script>
+</head>
+    <body>
+    <header class="top">
+        <h1 class="titletop">JustStreamIt</h1>
+        <nav>
+            <ul class="menu">
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#title_category">Catégories</a></li>
+            </ul>
+        </nav>
+    </header>
 
-	<body>
-		<div id="bloc_page"></div>
-			<header>
-				<div id="titre_principal">
-					<h1>JustStreamIt</h1>
-				</div>
+    <div id="my_modal" class="modal">
+        <div class="modal_content">
+            <div class="modal_header">
+                <span class="close" onclick="closeTheModal()">&times;</span>
+                <h2 class="modal_movie_title">null</h2>
+                <div class="movie_image_container">
+                    <img class="movie_image" src="null" alt="">
+                </div>
+            </div>
+            <div id="model_body">
+                <div class="genres"></div>
+                <div class="year"></div>
+                <div class="rated"></div>
+                <div class="imdb_score"></div>
+                <div class="directors"></div>
+                <div class="actors"></div>
+                <div class="duration"></div>
+                <div class="countries"></div>
+                <div class="worldwide_gross_income"></div>
+                <div class="long_description">
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="box1">
+        <!-- best movie uploaded by JS -->
+    </div>         
 
-				<nav>
-					<ul>
-						<li><a href="#">Accueil</a></li>
-						<li><a href="#">Catégories</a></li>
-					</ul>
-				</nav>
-			</header>
+    <div class="container">
+        <div class="color_box">
+            <h2 id="best_movie">Best Movies</h2>
+            <div class="carousel1">
+                <!-- best movies uploaded by JS -->
+            </div>
+        </div>
 
-			<div id="meilleur_film">
-				<div class="best_movie">
-					<div class="item__image">
-						<img id="best_movie_img" src="" alt="Les évadés">
-					</div>
-					<div class="item__body">
-					  <div class="item__title">
-						<h2 id="title_best_movie"></h2>
-					  </div>
-					  <div class="item__description">
-						<p>Le banquier Andy Dufresne est arrêté pour avoir tué sa femme et son amant. 
-						Après une dure adaptation, il tente d'améliorer les conditions de la prison et de 
-						redonner de l'espoir à ses compagnons.</p>
-					  </div>
-					  <a href="#" class="button">Voir le film</a>
-					</div>
-				</div>
-			</div>			
-			<main>
-				<section class="carousel">
-					<ul class="carousel-items">
-						<li class="carousel-item">
-							<div class="card">
-								<h2 class="card-title">Inception</h2>
-								<img src="image/inception.png" />
-								<div class="card-content">
-									<p>A thief who steals corporate secrets through the use 
-	of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O.,
-	but his tragic past may doom the project and his team to disaster.</p>
-									<a href="#" class="button">Voir le film</a>
-								</div>
-							</div>
-						</li>
-						<li class="carousel-item">
-							<div class="card">
-								<h2 class="card-title">Iron Man 2</h2>
-								<img src="image/iron_man_2.png" />
-								<div class="card-content">
-									<p>Le monde étant maintenant conscient de son identité 
-	d'Iron Man, Tony Stark doit faire face à la fois à sa santé qui se détériore et à un vengeur
-	fou ayant des liens avec l'héritage de son père.</p>
-									<a href="#" class="button">Voir le film</a>
-								</div>
-							</div>
-						</li>
+        <div class="color_box">
+            <h2 id="title_category">Action</h2>
+            <div class="carousel2">
+                <!-- best movies uploaded by JS -->
+            </div>
+        </div>
+
+        <div class="color_box">
+            <h2 id="title_category">Horror</h2>
+            <div class="carousel3">
+                <!-- best movies uploaded by JS -->
+            </div>
+        </div>
+
+        <div class="color_box">
+            <h2 id="title_category">Animation</h2>
+            <div class="carousel4">
+                <!-- best movies uploaded by JS -->
+            </div>
+        </div>
+    </div>
+    </body>
+</html>
